<resources>
    <string name="app_name">login activity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo4">TODO</string>
    <string name="todo2">TODO</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign-in</string>
    <string name="second_page">Second Page</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="multiplayer">multiplayer</string>
    <string name="multiplayer1">Online</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="show">Show</string>
    <string name="local">Local</string>
    <string name="online">Online</string>
    <string name="todo8">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="textview12">TextView</string>
    <string name="register1">Register</string>
    <string name="todo20">TODO</string>
    <string name="player_1_0">Player 1 : 0</string>
    <string name="player_2_0">Player 2 : 0</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>
    <string name="human">Human :</string>
    <string name="a_i">A.I. :</string>
</resources>