<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#fffff0"
    android:paddingLeft="30dp"
    android:paddingTop="70dp"
    android:paddingRight="30dp"
    android:paddingBottom="70dp"
    android:visibility="visible"
    tools:visibility="visible">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="303dp"
        android:layout_height="402dp"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="92dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="49dp"
            android:layout_marginTop="70dp"
            android:autofillHints=""
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="89dp"
            android:layout_marginBottom="198dp"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />


        <ImageButton
            android:id="@+id/btnlogin"
            android:layout_width="58dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="117dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="127dp"

            android:background="@drawable/ic_login"
            android:contentDescription="@string/todo20"
            android:text="@string/login"
            android:textColor="#3E3B3B"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ImageButton
            android:id="@+id/googlesignbutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="155dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/ic_google_icon"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/regisbutton"
            android:layout_width="40dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="215dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/ic_registration"
            android:contentDescription="@string/todo" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="206dp"
            android:text="@string/show"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="86dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="321dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="49dp"
            android:text="@string/register1"
            android:textAlignment="center"
            android:textColor="#3A3C3C"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:fontFamily="cursive"
        android:text="@string/tic_tac_toe"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

</androidx.constraintlayout.widget.ConstraintLayout>