<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context=".Multi_choose">

    <ImageButton
        android:id="@+id/globally"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_above="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="442dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ic_online"
        android:contentDescription="@string/todo8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="196dp"
        android:text="@string/online"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#272424"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="79dp"
        android:layout_height="75dp"
        android:layout_below="@+id/globally"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/ic_back_arrow_2"
        android:contentDescription="@string/todo10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="456dp"
        android:text="@string/local"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C0C0C"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/locally"
        android:layout_width="210dp"
        android:layout_height="202dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="97dp"
        android:background="@drawable/ic_local"
        android:contentDescription="@string/todo11" />
</RelativeLayout>